--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa-calendar text-primary sr-icons"></i>
                         <h3>일시</h3>
                         <p class="text-muted">
                             2017년 5월 27일 토요일 AM 10:50 - PM 3:30 <br>
@@ -119,7 +119,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa-map text-primary sr-icons"></i>
                         <h3>장소</h3>
                         <p class="text-muted">
                             학익장로교회 중고등부실<br>
@@ -129,16 +129,9 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
                         <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
+                        <h3>준비할 것</h3>
+                        <p class="text-muted">너만 오면 돼♡</p>
                     </div>
                 </div>
             </div>
@@ -154,10 +147,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    2016.12.23
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    성탄절
                                 </div>
                             </div>
                         </div>
@@ -169,10 +162,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    2016.12.23
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    성탄절
                                 </div>
                             </div>
                         </div>
@@ -184,10 +177,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    2016.12.23
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    성탄절
                                 </div>
                             </div>
                         </div>
@@ -199,10 +192,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    2016.08.01~03
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    조이코리아 연합수련회
                                 </div>
                             </div>
                         </div>
@@ -214,10 +207,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    2016.08.01~03
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    조이코리아 연합수련회
                                 </div>
                             </div>
                         </div>
@@ -229,10 +222,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    2016.08.01~03
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    조이코리아 연합수련회
                                 </div>
                             </div>
                         </div>
@@ -245,8 +238,8 @@
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a>
+                <h2>그래서! 어디로 가면 된다고!?</h2>
+                <a href="http://naver.me/GERpIhI6" target="_blank" class="btn btn-default btn-xl sr-button">너를 위해 지도를 준비했어</a>
             </div>
         </div>
     </aside>
@@ -255,17 +248,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
+                    <h2 class="section-heading">더 궁금하게 있니?</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>
+                        하나님을 알고 싶니? 예수님의 사랑이 궁금하니?<br>
+                        우리는 언제든지 열려있으니까 언제든지 연락줘 ♡
+                    </p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>123-456-6789</p>
+                    <p>
+                        조형준 전도사 : 010-6776-4752<br>
+                        학익장로교회 사무실 : 032-868-8475
+                    </p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <p>조형준 전도사 : <a href="mailto:your-email@your-domain.com">뭘까요?</a></p>
                 </div>
             </div>
         </div>
