--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                         <a class="page-scroll" href="#services">자세한 일정을 알려줄게</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#portfolio">Photo Zone</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">더 궁금한게 있니?</a>
                     </li>
                 </ul>
             </div>
@@ -112,7 +112,7 @@
                         <i class="fa fa-4x fa-calendar text-primary sr-icons"></i>
                         <h3>일시</h3>
                         <p class="text-muted">
-                            2017년 5월 27일 토요일 AM 10:50 - PM 3:30 <br>
+                            2017년 5월 27일 토요일 AM 10:30 - PM 3:30 <br>
                             2017년 5월 28일 주일 AM 08:30 - AM 11:00
                         </p>
                     </div>
@@ -264,7 +264,7 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p>조형준 전도사 : <a href="mailto:your-email@your-domain.com">뭘까요?</a></p>
+                    <p>조형준 전도사 : <a href="mailto:kanhj77@naver.com">kanhj77@naver.com</a></p>
                 </div>
             </div>
         </div>
