--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    2016.12.23
+                                    2016.5.14
                                 </div>
                                 <div class="project-name">
-                                    성탄절
+                                    학익교회 전교인 체육대회
                                 </div>
                             </div>
                         </div>
@@ -162,10 +162,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    2016.12.23
+                                    2016.08.01~03
                                 </div>
                                 <div class="project-name">
-                                    성탄절
+                                    조이코리아 연합수련회
                                 </div>
                             </div>
                         </div>
@@ -177,10 +177,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    2016.12.23
+                                    2016.08.01~03
                                 </div>
                                 <div class="project-name">
-                                    성탄절
+                                    조이코리아 연합수련회
                                 </div>
                             </div>
                         </div>
@@ -192,10 +192,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    2016.08.01~03
+                                    2016.10.29
                                 </div>
                                 <div class="project-name">
-                                    조이코리아 연합수련회
+                                    야유회 - 인천대공원 캠핑장
                                 </div>
                             </div>
                         </div>
@@ -207,10 +207,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    2016.08.01~03
+                                    2016.12.23
                                 </div>
                                 <div class="project-name">
-                                    조이코리아 연합수련회
+                                    성탄절 행사
                                 </div>
                             </div>
                         </div>
@@ -222,10 +222,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    2016.08.01~03
+                                    2016.12.23
                                 </div>
                                 <div class="project-name">
-                                    조이코리아 연합수련회
+                                    성탄절 행사
                                 </div>
                             </div>
                         </div>
