--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta property="og:image" content="img/ogImg/invitation_20170527.jpg"/>
+    <meta property="og:title" content="중고등부 친구초청잔치"/>
 
     <title>Welcome - Hakik Church</title>
 
