--- a/pamphlet_20170603.html
+++ b/pamphlet_20170603.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <!--<meta property="og:image" content="이미지"/>-->
+    <meta property="og:title" content="너와 함께하면 좋겠Day"/>
 
     <title>Welcome - Hakik Church</title>
 
