--- a/pamphlet_20170603.html
+++ b/pamphlet_20170603.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <!--<meta property="og:image" content="이미지"/>-->
+    <meta property="og:image" content="img/ogImg/invitation_20170603.jpg"/>
     <meta property="og:title" content="너와 함께하면 좋겠Day"/>
 
     <title>Welcome - Hakik Church</title>
@@ -123,7 +123,7 @@
                     <i class="fa fa-4x fa-calendar text-primary sr-icons"></i>
                     <h3>일시</h3>
                     <p class="text-muted">
-                        2017년 5월 27일 토요일 PM 4:50 ~ ♡ <br>
+                        2017년 6월 3일 토요일 PM 4:50 ~ ♡ <br>
                     </p>
                 </div>
             </div>
@@ -151,6 +151,51 @@
 <section class="no-padding" id="portfolio">
     <div class="container-fluid">
         <div class="row no-gutter popup-gallery">
+            <div class="col-lg-4 col-sm-6">
+                <a href="img/pamphlet_20170603/full/20160409.jpg" class="portfolio-box">
+                    <img src="img/pamphlet_20170603/thumb/20160409.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                2016.4.9
+                            </div>
+                            <div class="project-name">
+                                야유회 - 여의도
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="img/pamphlet_20170603/full/20160703.jpg" class="portfolio-box">
+                    <img src="img/pamphlet_20170603/thumb/20160703.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                2016.7.3
+                            </div>
+                            <div class="project-name">
+                                맥추감사절
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="img/pamphlet_20170603/full/20160813.jpg" class="portfolio-box">
+                    <img src="img/pamphlet_20170603/thumb/20160813.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                2016.8.13~15
+                            </div>
+                            <div class="project-name">
+                                청년부 하계 수련회
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="img/pamphlet_20170603/full/1.jpg" class="portfolio-box">
                     <img src="img/pamphlet_20170603/thumb/1.jpg" class="img-responsive" alt="">
